rustdocs/errors/rust-bitcoin-internals-src-lib.rs.txt
error: environment variable `OUT_DIR` not defined at compile time
  --> ../rust-bitcoin/internals/src/lib.rs:30:22
   |
30 |     include!(concat!(env!("OUT_DIR"), "/rust_version.rs"));
   |                      ^^^^^^^^^^^^^^^
   |
   = help: Cargo sets build script variables at run time. Use `std::env::var("OUT_DIR")` instead

error[E0432]: unresolved import `safety_boundary`
 --> ../rust-bitcoin/internals/src/array_vec.rs:7:9
  |
7 | pub use safety_boundary::ArrayVec;
  |         ^^^^^^^^^^^^^^^ help: a similar path exists: `self::safety_boundary`

error[E0432]: unresolved import `storage`
 --> ../rust-bitcoin/internals/src/error/input_string.rs:5:5
  |
5 | use storage::Storage;
  |     ^^^^^^^ help: a similar path exists: `self::storage`

error[E0432]: unresolved import `input_string`
  --> ../rust-bitcoin/internals/src/error/mod.rs:10:9
   |
10 | pub use input_string::InputString;
   |         ^^^^^^^^^^^^ help: a similar path exists: `self::input_string`

error[E0277]: the trait bound `ArrayVec<T, CAP>: Clone` is not satisfied
  --> ../rust-bitcoin/internals/src/array_vec.rs:16:14
   |
16 |     #[derive(Copy)]
   |              ^^^^ unsatisfied trait bound
   |
   = help: the trait `core::clone::Clone` is not implemented for `array_vec::safety_boundary::ArrayVec<T, CAP>`
note: required by a bound in `core::marker::Copy`
  --> library/core/src/marker.rs:462:0
   = note: the full name for the type has been written to 'lib.long-type-12413498698380173133.txt'
   = note: consider using `--verbose` to print the full type name to the console
help: consider annotating `array_vec::safety_boundary::ArrayVec<T, CAP>` with `#[derive(Clone)]`
   |
17 +     #[derive(Clone)]
18 |     pub struct ArrayVec<T: Copy, const CAP: usize> {
   |

error: aborting due to 5 previous errors

Some errors have detailed explanations: E0277, E0432.
For more information about an error, try `rustc --explain E0277`.
